# mindbase

./: .gitignore  Cargo.toml  GLOSSARY.md  PHILOSOPHY.md  README.md  mindbase-bill-of-rights.html  plan.txt  prologish_ideation.txt
benches/: basic.rs
capnp/: allegation.capnp
crates/artifact/: Cargo.toml
crates/artifact/src/: artifact.rs  body.rs  id.rs  lib.rs  test.rs
crates/artifact/tests/: colors.json  colors.rs
crates/claim/: Cargo.toml
crates/claim/src/: body.rs  lib.rs  relation.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: basic.rs
crates/core/src/: agent.rs  allegation.rs  analogy.rs  analogy_old.rs  artifact.rs  claim.rs  error.rs  lib.rs  mbql.rs  policy.rs  service.rs  symbol.rs  xport.rs
crates/core/src/agent/: signature.rs  symbolize.rs
crates/core/src/mbql/: ast.rs
crates/core/src/plugin/: spacy.rs
crates/core/src/search/: context.rs  node.rs
crates/core/src/service/: index.rs
crates/core/src/util/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  key_manager.rs  lib.rs  signature.rs
crates/crypto/src/key_manager/: storage.rs
crates/crypto/src/keys/: custodian.rs  mod.rs  private.rs  public.rs
crates/data-adapters/: Cargo.toml
crates/data-adapters/src/: error.rs  json.rs  lib.rs
crates/data-adapters/src/json/: test.rs  typemap.rs
crates/data-adapters/tests/: colors.rs
crates/fuzzyset/: Cargo.toml
crates/fuzzyset/src/: fuzzyset.rs  lib.rs  polar.rs  test_util.rs  traits.rs
crates/fuzzyset/tests/: basic.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: language_en.rs  lib.rs
crates/genesis/wordnet_en/: wordnet_to_mbql.py
crates/graph/: Cargo.toml
crates/graph/src/: error.rs  lib.rs  traits.rs
crates/hypergraph/: Cargo.toml  next.txt
crates/hypergraph/src/: adapter.rs  analogy.rs  artifact.rs  claim.rs  entity.rs  error.rs  fuzzyset.rs  hyperedge.rs  hypergraph.rs  index.rs  lib.rs  main.rs  simpleid.rs  symbol.rs  traits.rs
crates/hypergraph/src/adapter/: memory.rs  sled.rs
crates/hypergraph/src/analogy/: categorical.rs
crates/hypergraph/src/traits/: basics.rs
crates/hypergraph/tests/: experiment.rs
crates/kgraph/: Cargo.toml
crates/kgraph/src/: claim.rs  convenience.rs  fuzzyset.rs  lib.rs  symbol.rs  testing.rs
crates/kgraph/src/analogy/: associative.rs  categorical.rs  query.rs
crates/kgraph/tests/: experiment.rs
crates/mbcli/: Cargo.toml
crates/mbcli/src/: main.rs
crates/mbcli/src/subcommand/: auth.rs  export.rs  import.rs  mod.rs  repl.rs  sprightly.rs
crates/mbql/: Cargo.toml
crates/mbql/src/: ast.rs  error.rs  lib.rs  mbql.pest  parse.rs  query.rs
crates/mbql/src/search/: context.rs  mod.rs  node.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  lib.rs  memory.rs  sled.rs
crates/symbol/: Cargo.toml
crates/symbol/src/: analogy.rs  convenience.rs  fuzzyset.rs  lib.rs  symbol.rs  testing.rs  traits.rs
crates/symbol/src/analogy/: associative.rs  categorical.rs  query.rs
crates/symbol/tests/: experiment.rs
crates/types/: Cargo.toml
crates/types/src/: cas.rs  lib.rs
crates/util/: Cargo.toml
crates/util/src/: array64.rs  error.rs  lib.rs  serde_helper.rs
crates/util/src/iter/: match_pairwise_repeating.rs  pairwise_nonrepeating.rs
experiments/analogy_compare/: Cargo.toml
experiments/analogy_compare/src/: analogy.rs  atom.rs  fuzzyset.rs  main.rs  simpleid.rs  symbol.rs
genesis/wordnet_en/: wordnet-info.txt
genesis/wordnet_en/examples/: puppy.mbql
mbql/: artifacts.mbql  basic.mbql  binding.mbql  contradiction.mbql  ground.mbql  relationships.mbql  shoes.mbql  structured_data.mbql  walking_down_the_street.mbql
notebooks/: MindBase.ipynb  Plot Test.ipynb  README.md
proto/: mindbase.proto
schema/: mindbase.example.txt  mindbase.graphql
src/: README.md  agent.rs  agenthandle.rs  allegation.rs  analogy.rs  artifact.rs  concept.rs  entity.rs  error.rs  ground.rs  lib.rs  mbql.pest  mbql.rs  policy.rs  symbol.rs  types.rs  xport.rs
src/agent/: signature.rs
src/genesis/: language_en.rs  mod.rs  pos.rs
src/mbql/: ast.rs  display.rs  error.rs  mbql.pest  parse.rs  query.rs
src/mbql/ast/: artifact.rs  symbol.rs
src/search/: context.rs  mod.rs  node.rs  old.rs
src/util/: iter.rs  mod.rs
src/util/iter/: match_pairwise.rs  pairwise_nonrepeating.rs  sided_merge.rs  sorted_intersect.rs
tests/: apple.rs  declarative.ron  dialog.rs  other.rs
