[workspace]
members = [
    "crates/artifact",
    "crates/claim",
    "crates/core",
    "crates/crypto",
    "crates/fuzzyset",
    "crates/genesis",
    "crates/hypergraph",
    "crates/mbcli",
    "crates/mbql",
    "crates/store",
    "crates/symbol",
    "crates/util"
]

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.test.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16