[workspace]
members = [
    "crates/claim",
    "crates/client",
    "crates/core",
    "crates/data-adapters",
    "crates/fuzzyset",
    "crates/genesis",
    "crates/hypergraph",
    "crates/mbcli",
    "crates/mbql",
    "crates/server",
    "crates/symbol",
    "crates/types",
    "crates/util"
]

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.test.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16