[package]
name = "mindbase-artifact"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-crypto = { path="../crypto" }
mindbase-util = { path="../util" }

serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
bincode = "1.3"
sha2 = "0.9"
lazy_static="1.4.0"

[dev-dependencies]
serde_json="1.0"