[package]
name = "mindbase-artifact"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyplace = "0.1.0"
mindbase-hypergraph = { path="../hypergraph" }
mindbase-util = { path="../util" }

serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
bincode = "1.3"
sha2 = "0.9"
lazy_static="1.4.0"
chrono = { version="0.4", features=["serde"] }

[dev-dependencies]
toboggan-kv = "0.1.1"