[package]
name = "mindbase-claim"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-symbol = { path="../symbol" }
mindbase-crypto = { path="../crypto" }
mindbase-util = { path="../util" }

rusty_ulid = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
