[package]
name = "mindbase-claim"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-hypergraph = { path = "../hypergraph" }
# mindbase-symbol = { path="../symbol" }
keyplace = "0.1.0"
mindbase-util = { path="../util" }

rusty_ulid = "0.10"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
bincode = "1.3"
