[package]
name = "mindbase-core"
version = "0.0.1"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/mindbase"
# build = "build.rs"
exclude = ["mbql/*"]

[dependencies]
mindbase-util = { path="../util" }
mindbase-crypto = { path="../crypto" }
typenum = "1.12"
inverted-index-util = "0.0.5"
base64 = "0.12"
tempfile = "3.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.2.1"
sled = "0.31.0"
rand="0.6"
sha2 = "0.8"
rusty_ulid = "0.9.3"
chrono = { version = "0.4.10", features = ["serde"] }
# capnp = "0.12.1"
regex="1.3.6"
lazy_static="1.4.0"

# TODO 3 - Move mbql bin to new crate
pest = "2.1.3"
pest_derive = "2.1.0"


[build-dependencies]
# capnpc = "0.12.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false