[package]
name = "mindbase-core"
version = "0.0.1"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/mindbase"
# build = "build.rs"
exclude = ["mbql/*"]

[dependencies]
mindbase-hypergraph = { path="../hypergraph" }
mindbase-mbql = { path="../mbql" }
mindbase-util = { path="../util" }
mindbase-crypto = { path="../crypto" }

typenum = "1.12"
inverted-index-util = "0.0.5"
base64 = "0.12"
tempfile = "3.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.2.1"
rand="0.6"
sha2 = "0.9"
chrono = { version = "0.4.10", features = ["serde"] }
# capnp = "0.12.1"
regex="1.4"
lazy_static="1.4.0"

[build-dependencies]
# capnpc = "0.12.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false