[package]
name = "mindbase-core"
version = "0.0.1"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/mindbase"
# build = "build.rs"
exclude = ["mbql/*"]

[dependencies]
mindbase-symbol = { path="../symbol" }
mindbase-mbql = { path="../mbql" }
mindbase-util = { path="../util" }
keyplace = "0.1.0"
toboggan-kv = "0.1.1"
mindbase-artifact = { path="../artifact" }
mindbase-claim = { path="../claim" }

rusty_ulid = "0.10"
typenum = "1.12"
inverted-index-util = "0.0.5"
base64 = "0.13"
tempfile = "3.1"
serde_json = "1.0.48"
serde = {version = "1.0", features=["derive"]}
bincode = "1.3"
rand="0.7"
sha2 = "0.9"
chrono = { version = "0.4.10", features = ["serde"] }
# capnp = "0.12.1"
regex="1.4"
lazy_static="1.4.0"

[build-dependencies]
# capnpc = "0.12.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false