[package]
name = "mindbase-crypto"
version = "0.0.1"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/mindbase"

[features]
wasm=["rand/wasm-bindgen"]

[dependencies]
mindbase-util = {path = "../util" }
ed25519-dalek="1.0"
scrypt = "0.4.1"
rand = { version = "0.7" }
sha2="0.9"
hmac="0.9"
crypto-mac="0.9"
constant_time_eq = "0.1.5"
base64 = "0.12.3"
serde = { version = "1.0.105", features = ["derive"] }
zeroize={ version = "1.1", features=["zeroize_derive"] }

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-console-logger = "^0.1.1"
wasm-bindgen-futures = "0.4.5"
wasm-bindgen-test = "0.3"

[profile.dev]
opt-level = 3