[package]
name = "mindbase-data-adapters"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-hypergraph = { path="../hypergraph" }
mindbase-artifact = { path="../artifact" }
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
