[package]
name = "fuzzyset"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
regex="1.4"
