[package]
name = "mindbase-hypergraph"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toboggan-kv = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
inverted-index-util="0.0.5"
sha2 = "0.9"
rusty_ulid = "0.10"
bincode = "1.3"
base64 = "0.13"
typenum="1.12"
