[package]
name = "mbcli"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-core = {path = "../core"}
mindbase-crypto = {path = "../crypto"}
structopt = "0.3"
rustyline = "6.3"
dialoguer = "0.7"
dirs = "3.0"
