[package]
name = "mbcli"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl=["glow","glutin","glyph_brush"]

[dependencies]
mindbase-artifact = {path = "../artifact"}
keyplace = "0.1.0"
mindbase-core = {path = "../core"}
mindbase-hypergraph = {path = "../hypergraph"}
structopt = "0.3"
rustyline = "6.3"
dialoguer = "0.7"
dirs = "3.0"
serde = {version = "1.0", features=["derive"]}

glutin = {version="0.25", optional=true}
glow = {version="0.6", optional=true}
glyph_brush = {version="0.7", optional=true}