[package]
name = "mindbase-mbql"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-symbol = { path="../symbol" }
mindbase-types = { path="../types" }
mindbase-claim = { path="../claim" }
mindbase-hypergraph = { path="../hypergraph" }

itertools = "0.9"
pest = "2.1.3"
pest_derive = "2.1.0"
inverted-index-util = "0.0.5"
typenum = "1.12"
