[package]
name = "mindbase-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
structopt = "0.3"
tonic = "0.5"
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

mindbase-hypergraph = { path="../hypergraph" }
mindbase-types= { path="../types" }

[build-dependencies]
tonic-build = "0.5"