[package]
name = "mindbase-store"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
inverted-index-util = "0.0.5"
base64 = "0.13"
tempfile = "3.1"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
sled = "0.34"
