[package]
name = "mindbase-symbol"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindbase-util = { path = "../util"}
mindbase-fuzzyset = { path = "../fuzzyset" }

colorful = "0.2.1"
itertools = "0.9"
regex="1.4"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
sha2 = "0.9"
bincode = "1.3"