[package]
name = "analogy_compare"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.3.7"
# mindbase-core={ path="../../crates/core" }
colorful = "0.2.1"
itertools = "0.9.0"